--- a/AsianPay/app/src/main/res/layout/activity_login.xml
+++ b/AsianPay/app/src/main/res/layout/activity_login.xml
@@ -62,6 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Forgot Password"
+            android:id="@+id/btn_forgot_pass"
             android:background="?android:attr/selectableItemBackground"
             />
     </LinearLayout>
@@ -72,7 +73,7 @@
         android:text="Login"
         app:layout_constraintBottom_toTopOf="@+id/btn_register"
         app:layout_constraintLeft_toLeftOf="@id/btn_register"
-        app:layout_constraintRight_toRightOf="@+id/btn_register"
+        app:layout_constraintRight_toRightOf="@+id/btn_login"
         android:layout_marginBottom="10dp"
         android:layout_marginHorizontal="20dp"
         android:paddingVertical="15dp"
