--- a/AsianPay/app/src/main/res/layout/activity_home.xml
+++ b/AsianPay/app/src/main/res/layout/activity_home.xml
@@ -11,15 +11,31 @@
         android:layout_height="match_parent"
         android:layout_margin="20dp"
         android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/greeting"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Good Morning"
-            android:textSize="20dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            >
+            <TextView
+                android:id="@+id/greeting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Good Morning"
+                android:textSize="20dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="@id/btn_profile"
+                app:layout_constraintBottom_toBottomOf="@id/btn_profile"
+
+                />
+            <ImageView
+                android:id="@+id/btn_profile"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/baseline_person_24"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:clickable="true"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -123,8 +139,8 @@
                 >
 
                 <ImageView
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:src="@drawable/baseline_download_24" />
 
                 <com.google.android.material.textview.MaterialTextView
@@ -156,8 +172,8 @@
                 >
 
                 <ImageView
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:src="@drawable/baseline_download_24" />
 
                 <com.google.android.material.textview.MaterialTextView
@@ -195,8 +211,8 @@
                 >
 
                 <ImageView
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:src="@drawable/baseline_phone_24" />
 
                 <com.google.android.material.textview.MaterialTextView
@@ -228,8 +244,8 @@
                 >
 
                 <ImageView
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:src="@drawable/baseline_lightbulb_24" />
 
                 <com.google.android.material.textview.MaterialTextView
