--- a/AsianPay/app/src/main/res/layout/activity_registration.xml
+++ b/AsianPay/app/src/main/res/layout/activity_registration.xml
@@ -112,6 +112,39 @@
                 android:id="@+id/confirm_pass"/>
 
         </com.google.android.material.textfield.TextInputLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Gender"
+            android:textSize="24dp"
+            />
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/gender"
+
+            >
+            <RadioButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Male"
+                android:id="@+id/btn_male"
+                />
+            <RadioButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Female"
+                android:id="@+id/btn_female"
+                />
+        </RadioGroup>
+        <CheckBox
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="I agree to terms and conditions"
+            android:id="@+id/chk_box_terms"
+            />
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
