--- a/AsianPay/app/src/main/res/layout/list_item.xml
+++ b/AsianPay/app/src/main/res/layout/list_item.xml
@@ -6,6 +6,7 @@
     android:padding="10dip"
     android:textSize="16dip"
     android:textStyle="bold"
+    android:textColor="#eb3d34"
     >
 
 </TextView>
